--- a/sass/global.scss
+++ b/sass/global.scss
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif;
 }
 
-$background: url("../images/bg-2022.jpg");
+$background: url("../images/ano-novo.jpg");
 
 body {
   background: rgb(15, 15, 15) $background;
