--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -4,6 +4,7 @@
   left: 100px;
   right: 100px;
   bottom: 80px;
+  margin-bottom: 50px;
   background: #0000008c $background;
   background-blend-mode: initial;
   background-size: cover;
