--- a/sass/global.scss
+++ b/sass/global.scss
@@ -14,4 +14,5 @@ body {
   background-blend-mode: hard-light;
   background-size: cover;
   background-position: center;
+  padding-bottom: 50px;
 }
